force-app/main/default/objects/SoilAnalysis__c/SoilAnalysis__c.object-meta.xml
<CustomObject>
    <label>SoilAnalysis</label>
    <nameField>
        <displayFormat>SA-{0000}</displayFormat>
        <label>SoilAnalysis Code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SoilAnalysis</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>