force-app/main/default/objects/SoilAnalysis__c/fields/Date_Requested__c.field-meta.xml
<CustomField>
    <fullName>Date_Requested__c</fullName>
    <label>Date Requested</label>
    <required>true</required>
    <type>Date</type>
</CustomField>