force-app/main/default/objects/SoilAnalysis__c/fields/pH__c.field-meta.xml
<CustomField>
    <fullName>pH__c</fullName>
    <label>pH</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>