force-app/main/default/objects/SoilAnalysis__c/fields/Sector__c.field-meta.xml
<CustomField>
    <fullName>Sector__c</fullName>
    <label>Sector</label>
    <referenceTo>Sector__c</referenceTo>
    <relationshipLabel>SoilAnalysis</relationshipLabel>
    <relationshipName>SoilAnalysis</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>