force-app/main/default/objects/SoilAnalysis__c/validationRules/pH_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>pH_Validation</fullName>
    <active>true</active>
    <description>pH cannot be less than 0 or greater than 14</description>
    <errorConditionFormula>OR(pH__c &lt; 0,pH__c &gt; 14)</errorConditionFormula>
    <errorDisplayField>pH__c</errorDisplayField>
    <errorMessage>pH cannot be less than 0 or greater than 14</errorMessage>
</ValidationRule>